--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
-                        <a href="#"><img src="./images/mealqueue.png" class="img-fluid sec6-image" alt=""></a>
+                        <a href="#"><img src="./images/mealqueue.png" class="img-fluid sec6-image-right" alt=""></a>
                     </div>
                 </div>
 
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
-                        <a href="#"><img src="./images/tigercrush.png" class="img-fluid sec6-image" alt=""></a>
+                        <a href="#"><img src="./images/tigercrush.png" class="img-fluid sec6-image-right" alt=""></a>
                     </div>
                 </div>
             </div>
