included all l paper information

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                         470: Principles of Blockchains (Fall 2022)</a>
                                 </div>
                                 <br>
-                                <img src="./images/rust.png" style="width:25px;max-height:25px;">
+                                <img src="./images/rust.png" style="width:30px;height:30px;">
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                                         418: Distributed Systems (Spring 2021)</a>
                                 </div>
                                 <br>
-                                <img src="./images/go.png" style="width:50px;max-height:25px;">
+                                <img src="./images/go.png" style="width:80px;height:30px;">
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                         418: Distributed Systems (Spring 2021)</a>
                                 </div>
                                 <br>
-                                <img src="./images/go.png" style="width:50px;max-height:25px;">
+                                <img src="./images/go.png" style="width:80px;max-height:30px;">
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                         375: Computer Architecture (Spring 2021)</a>
                                 </div>
                                 <br>
-                                <img src="./images/c++.png" style="width:25px;width:25px;">
+                                <img src="./images/c++.png" style="width:30px;height:30px;">
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                         318: Operating Systems (Fall 2020)</a>
                                 </div>
                                 <br>
-                                <img src="./images/c.png" style="width:25px;width:25px;">
+                                <img src="./images/c.png" style="width:30px;height:30px;">
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                                         461: Computer Networks (Spring 2020)</a>
                                 </div>
                                 <br>
-                                <img src="./images/go.png" style="width:50px;max-height:25px;">
+                                <img src="./images/go.png" style="width:80px;height:30px;">
                             </div>
                         </div>
                     </div>
@@ -291,34 +291,32 @@
                 <div class="row section-6-inner mx-auto">
                     <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
                         <div class="section-6-heading text-center">
-                            <span class="fw-bold">Survey of TinyML Methods for Detecting Humpback Whale
-                                Vocalizations</span>
+                            <span class="fw-bold">Automated Just-In-Time (JIT) Liquidity Provision on the Uniswap
+                                Protocol</span>
                         </div>
                         <div class="section-6-para">
-                            In this study, we explore the tradeoffs between accuracy, model size, and training time for
-                            humpback whale vocalization detection models. This project serves as an introduction to and
-                            a surface-level investigation of TinyML techniques, including pruning, post-training
-                            quantization, quantization-aware training, TFLite, and smart feature selection. Our findings
-                            highlight the potential of using TFLite as a baseline for creating efficient models
-                            while showing the importance of domain-specific knowledge in further optimizing model
-                            accuracy and size.
+                            In this project, we build a system that (1) watches the Ethereum mempool for Uniswap V2
+                            transactions in real time, (2) filters for transactions that are viable for a JIT liquidity
+                            attack, and (3) uses Streamlit to monitor the statistics, including the potential profit, of
+                            executing a JIT liquidity attack on the identified transactions. This system can help
+                            traders make better decisions about JIT liquidity provision as a potential trading strategy.
                         </div>
                         <div class="section-6-button text-center">
                             <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
                         </div>
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
-                        <a href="#"><img src="./images/whale_hor.png" class="img-fluid sec6-image-right" alt=""></a>
+                        <a href="#"><img src="./images/JIT-Arch.png" class="img-fluid sec6-image-right" alt=""></a>
                     </div>
                 </div>
 
-                <br><br><br><br><br>
+                <br><br><br>
 
                 <div class="row section-6-inner mx-auto">
-                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
                         <a href="#"><img src="./images/whale_hor.png" class="img-fluid sec6-image-left" alt=""></a>
                     </div>
-                    <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
+                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
                         <div class="section-6-heading text-center">
                             <span class="fw-bold">Survey of TinyML Methods for Detecting Humpback Whale
                                 Vocalizations</span>
@@ -329,8 +327,7 @@
                             a surface-level investigation of TinyML techniques, including pruning, post-training
                             quantization, quantization-aware training, TFLite, and smart feature selection. Our findings
                             highlight the potential of using TFLite as a baseline for creating efficient models
-                            while showing the importance of domain-specific knowledge in further optimizing model
-                            accuracy and size.
+                            while showing the importance of domain-specific knowledge in feature selection.
                         </div>
                         <div class="section-6-button text-center">
                             <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
@@ -338,71 +335,119 @@
                     </div>
                 </div>
 
-                <br><br><br><br><br>
+                <br><br><br>
 
                 <div class="row section-6-inner mx-auto">
-                    <div class="section-6-heading text-center">
-                        Survey of TinyML Methods for Detecting Humpback Whale Vocalizations
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                        <div class="section-6-heading text-center">
+                            <span class="fw-bold">Survey of Blockchain<br>in IoT
+                                Applications</span>
+                        </div>
+                        <div class="section-6-para">
+                            In this paper, we investigate the attempted integrations of blockchains into IoT
+                            device systems. We find that the primary benefit that a private blockchain can provide to
+                            IoT systems is its use case as a distributed database when the chain structure makes sense
+                            for the data being stored (e.g. audit logs). In other use cases, we find that despite the
+                            benefits of security and immutability, a blockchain is not the best solution to achieve
+                            these properties in IoT systems, given the blockchain algorithms' costs, as well as
+                            manufacturers' and customers' incentives.
+                        </div>
+                        <div class="section-6-button text-center">
+                            <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
+                        </div>
                     </div>
-                    <div class="section-6-para">
-                        <br>
-                        In this study, we explore the tradeoffs between accuracy, model size, and training time for
-                        humpback whale vocalization
-                        detection models. We investigate the potential of using TensorFlow Lite (TFLite) and feature
-                        selection techniques to
-                        create smaller and more efficient models for low-power devices. We develop a custom Keras
-                        model using the pre-trained
-                        humpback whale model as a baseline, achieving 96.13% accuracy. We then train a TFLite model
-                        that achieves 76.25%
-                        accuracy but is only 5% of the size of the Keras model. Additionally, we experiment with
-                        different features, specifically mel-frequency cepstral coefficients (MFCCs), as inputs to a a
-                        VGG block-based CNN to
-                        showcase their higher
-                        performance (81.99% vs 68.14% accuracy), faster runtime, and smaller model size advantages
-                        over using the reference
-                        waveform features. Our findings highlight the potential of using TFLite as a baseline for
-                        creating efficient models
-                        while showing the importance of domain-specific knowledge in further optimizing model
-                        accuracy and size.
-                    </div>
-                    <div class="section-6-button text-center">
-                        <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'"><br>Download PDF</a>
+                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                        <a href="#"><img src="./images/iot.png" class="img-fluid sec6-image-right" alt=""></a>
                     </div>
                 </div>
 
                 <br><br><br>
 
                 <div class="row section-6-inner mx-auto">
-                    <div class="section-6-heading text-center">
-                        Survey of TinyML Methods for Detecting Humpback Whale Vocalizations
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                        <a href="#"><img src="./images/bert.png" class="img-fluid sec6-image-left" alt=""></a>
                     </div>
-                    <div class="section-6-para">
-                        <br>
-                        In this study, we explore the tradeoffs between accuracy, model size, and training time for
-                        humpback whale vocalization
-                        detection models. We investigate the potential of using TensorFlow Lite (TFLite) and feature
-                        selection techniques to
-                        create smaller and more efficient models for low-power devices. We develop a custom Keras
-                        model using the pre-trained
-                        humpback whale model as a baseline, achieving 96.13% accuracy. We then train a TFLite model
-                        that achieves 76.25%
-                        accuracy but is only 5% of the size of the Keras model. Additionally, we experiment with
-                        different features, specifically mel-frequency cepstral coefficients (MFCCs), as inputs to a a
-                        VGG block-based CNN to
-                        showcase their higher
-                        performance (81.99% vs 68.14% accuracy), faster runtime, and smaller model size advantages
-                        over using the reference
-                        waveform features. Our findings highlight the potential of using TFLite as a baseline for
-                        creating efficient models
-                        while showing the importance of domain-specific knowledge in further optimizing model
-                        accuracy and size.
+                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                        <div class="section-6-heading text-center">
+                            <span class="fw-bold">Replicating the Double-Hard Gender Debiasing Algorithm with BERTbase
+                                embeddings</span>
+                        </div>
+                        <div class="section-6-para">
+                            Word embeddings computed from human-generated sources tend to encode a strong discriminative
+                            gender bias which may affect downstream model output and performance. In this paper, we
+                            replicate the Double-Hard Debias (DHD) algorithm on GloVe embeddings as done in the paper,
+                            and then test the algorithm on BERTbase embeddings. Additionally, we reproduce the word
+                            embedding association test (WEAT) to measure debias performance, assess gender-based
+                            clustering performance of the most biased words on different embeddings, and evaluate the
+                            debiasing algorithm using the embedding concept categorization. We find that DHD does not
+                            significantly debias BERTbase but appears to improve its performance on the categorization
+                            task over GloVe.
+                        </div>
+                        <div class="section-6-button text-center">
+                            <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
+                        </div>
                     </div>
-                    <div class="section-6-button text-center">
-                        <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'"><br>Download PDF</a>
+                </div>
+
+                <br><br><br>
+
+                <div class="row section-6-inner mx-auto">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                        <div class="section-6-heading text-center">
+                            <span class="fw-bold">Deep Learning for<br>Automatic Transcription of<br>Human
+                                Beatboxing</span>
+                        </div>
+                        <div class="section-6-para">
+                            There are multiple products on the market which are able to transcribe human beatboxing and
+                            drums to MIDI (e.g. Ableton Live). This paper specifically explores the deep learning
+                            approaches to performing this task, assessing comparative performance and viability of three
+                            network architectures (a fully-connected neural network, a VGG-block, and AlexNet) on human
+                            beatboxing utterances extracted from the Amateur Vocal Percussion (AVP) dataset. We explore
+                            the effect of phoneme-consistency on classification accuracy, the impact of adding MFCC
+                            deltas and improvisation recordings for training, as well as the efficacy of our models in
+                            classifying beatboxing utterances made by people whose samples were absent in the training
+                            set.
+                        </div>
+                        <div class="section-6-button text-center">
+                            <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                        <a href="#"><img src="./images/bbx.png" class="img-fluid sec6-image-right" alt=""></a>
+                    </div>
+                </div>
+
+                <br><br><br>
+
+                <div class="row section-6-inner mx-auto">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                        <a href="#"><img src="./images/sensor.png" class="img-fluid sec6-image-left" alt=""></a>
+                    </div>
+                    <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                        <div class="section-6-heading text-center">
+                            <span class="fw-bold">Designing a Sensor System for Automated Water Depth Mapping in
+                                AWD-based Rice Field Irrigation Structures</span>
+                        </div>
+                        <div class="section-6-para">
+                            Compared to the traditional method of continuous rice field flooding, the Alternate Wetting
+                            and Drying (AWD) approach is much more water- and nitrogen-efficient, beneficial to soil
+                            quality maintenance, and enables intercropping. Sensor networks can be deployed to
+                            measure water levels across a field to alert farmer when more water is needed. In this
+                            project, we designed a proof-of-concept system consisting of a single sensor and a base
+                            station device. The base station requests and receives water depth data from the sensor,
+                            afterwards displaying it to the user. We built this system using two Arduino boards,
+                            two NRF24L01+ modules, and an eTape sensor. We tested the system for robustness and
+                            calibrated the eTape sensor output with manual measurements to ensure accuracy.
+                        </div>
+                        <div class="section-6-button text-center">
+                            <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='#'">Download PDF</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <br><br>
 
         <!-- SECTION NO 8 -->
         <footer class="container-fluid footer">
