reorder images on smaller-sized devices for consistent viewing

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                     </div>
                     <br>
                     <div class="paragraph mx-auto mt-2">
-                        I am a 2nd year MSE student studying CS at <b style='color:orange !important;'>Princeton
+                        I am a 2nd year MSE student studying CS at <b style='color:#ff8f00 !important;'>Princeton
                             University</b>.<br><br>
-                        This website details my projects and exploratory research during the past few years. <br>My
-                        interests converged on DBMS,
-                        high-concurrency design, and edge-cloud computing.
+                        This website details my projects and exploratory research during the past few years. My
+                        interests converged on DBMS, high-concurrency design, and edge-cloud computing.
                     </div>
+                    <br>
                     <a type="button" onclick=" window.open('https://www.linkedin.com/in/oleg-golev/','_blank')"
                         class="section-2-button fw-bold">Visit My LinkedIn<br>to See my Work Experience</a>
                 </div>
@@ -99,11 +99,10 @@
             <!-- Divider -->
             <div class="bold-line"></div>
             <br>
-
             <div class="row">
                 <div class="col">
                     <div class="section-5-text text-center mx-auto">
-                        Some Cool Things I Coded Up:
+                        Some Things I Coded Up:
                     </div>
                 </div>
             </div>
@@ -276,7 +275,6 @@
             <!-- Divider -->
             <div class="bold-line"></div>
             <br>
-
             <div class="row">
                 <div class="col">
                     <div class="section-5-text text-center mx-auto">
@@ -314,8 +312,8 @@
 
                 <br><br><br>
 
-                <div class="row section-6-inner mx-auto">
-                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                <div class="row section-6-inner mx-auto left-img-container">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4 left-img">
                         <img src="./images/whale_hor.png" class="img-fluid sec6-image-left" alt="">
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
@@ -368,8 +366,8 @@
 
                 <br><br><br>
 
-                <div class="row section-6-inner mx-auto">
-                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                <div class="row section-6-inner mx-auto left-img-container">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4 left-img">
                         <img src="./images/bert.png" class="img-fluid sec6-image-left" alt="">
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
@@ -426,8 +424,8 @@
 
                 <br><br><br>
 
-                <div class="row section-6-inner mx-auto">
-                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4">
+                <div class="row section-6-inner mx-auto left-img-container">
+                    <div class="col-lg-6 sec-6-left pe-0 pe-lg-4 left-img">
                         <img src="./images/sensor.png" class="img-fluid sec6-image-left" alt="">
                     </div>
                     <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
