--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
             </div>
 
             <div style="max-width:1000px; margin:0 auto;">
-
-                <div class="row mt-4 mt-md-5 work-gallery-row">
+                <div class="row mt-4 mt-md-5 gy-0 gy-md-4 work-gallery-row">
                     <div class="col-sm-6">
                         <div class="card text-center custom-card mt-5 mt-lg-0">
                             <div class="card-body">
@@ -136,10 +135,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div style="max-width:1000px; margin:0 auto;">
-                <div class="row mt-4 mt-md-5 work-gallery-row">
                     <div class=" col-sm-6">
                         <div class="card text-center custom-card mt-5 mt-lg-0">
                             <div class="card-body">
@@ -167,10 +162,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div style="max-width:1000px; margin:0 auto;">
-                <div class="row mt-4 mt-md-5 work-gallery-row">
                     <div class="col-sm-6">
                         <div class="card text-center custom-card mt-5 mt-lg-0">
                             <div class="card-body">
