better custom margins, spacings, and navbar

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 </div>
             </div>
 
-            <div style="max-width:1000px; margin:0 auto;">
-                <div class="row mt-4 mt-md-5 gy-0 gy-md-4 work-gallery-row">
+            <div style="max-width:1000px; margin:0 auto; margin-top: -40px; margin-bottom: -45px;">
+                <div class="row mt-4 mt-md-5 gy-lg-4 work-gallery-row">
                     <div class="col-sm-6">
                         <div class="card text-center custom-card mt-5 mt-lg-0">
                             <div class="card-body">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
 
-                <br><br><br><br><br>
+                <br><br><br>
 
                 <div class="row section-6-inner mx-auto">
                     <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
@@ -266,6 +266,7 @@
             <!-- Divider -->
             <div class="bold-line"></div>
             <br>
+
             <div class="row">
                 <div class="col">
                     <div class="section-5-text text-center mx-auto">
@@ -273,7 +274,7 @@
                     </div>
                 </div>
             </div>
-            <br><br><br>
+            <br><br>
 
             <div style="max-width:1200px; margin:0 auto; text-align: justify;">
                 <div class="row section-6-inner mx-auto">
@@ -444,7 +445,7 @@
             </div>
         </section>
 
-        <br><br>
+        <br>
 
         <!-- SECTION NO 8 -->
         <footer class="container-fluid footer">
