--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="./images/icons8-portfolio-48.png">
     <meta name="google-site-verification" content="W2YmFZW34qNJbw8xGDdp0JR2bK1bD8u39ITRd6L6x_Q" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -450,6 +452,13 @@
 
         <!-- SECTION NO 8 -->
         <footer class="container-fluid footer">
+            <div class="footer-text text-center ">
+                <b style='color:grey !important;'>
+                    <a class="nav-link nav-custom-link" target="_blank"
+                        href="https://icons8.com/icon/naDnVpQ3BNkR/portfolio">
+                        Portfolio</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+                </b>
+            </div>
         </footer>
     </main>
 </body>
