better footer, removed ugly link

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 <b style='color:grey !important;'>
                     <a class="nav-link nav-custom-link" target="_blank"
                         href="https://icons8.com/icon/naDnVpQ3BNkR/portfolio">
-                        Portfolio</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+                        Portfolio</a> icon by <a class="icons-link" target="_blank" href="https://icons8.com">Icons8</a>
                 </b>
             </div>
         </footer>
